Se hace cambio en tablas de modales

--- a/src/app/components/datosclientes/datosclientes.component.html
+++ b/src/app/components/datosclientes/datosclientes.component.html
@@ -403,7 +403,7 @@
               
                     <div class="col-12" >                     
                       <table  class="table table-striped">
-                        <thead>
+                        <thead class="thead-p2">
                         <tr class="EncTabla">
                           <th>#</th>
                           <th scope="col" ></th>
