--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -262,7 +262,7 @@
 
                   <div class="col-12" >                     
                     <table *ngIf="bBanderaDet" class="table table-striped">
-                      <thead>
+                      <thead class="thead-p2">
                       <tr class="EncTabla">
                         <th>#</th>
                         <th scope="col" style="text-align:left">LN</th>
@@ -356,7 +356,7 @@
                     </table>
 
                     <table *ngIf="bBanderaDetPro"  class="table table-striped">
-                      <thead>
+                      <thead class="thead-p2">
                       <tr  class="EncTabla">
                         <th scope="col" style="text-align:left">#</th>
                         <th scope="col" style="text-align:left">LN</th>
@@ -443,7 +443,7 @@
     
         <div class="col-12" >                     
           <table  class="table table-striped">
-            <thead>
+            <thead class="thead-p2">
             <tr class="EncTabla">
               <th>#</th>
               <th scope="col" ></th>
