--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -237,7 +237,7 @@
 
                 <div class="col-12" >                     
                   <table  class="table table-striped">
-                    <thead>
+                    <thead class="thead-p2">
                     <tr class="EncTabla">
                       <th>#</th>
                       <th scope="col" ></th>
