--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -326,7 +326,7 @@
 
           <div class="col-12" >                     
             <table  class="table table-striped">
-              <thead>
+              <thead class="thead-p2">
               <tr class="EncTabla">
                 <th>#</th>
                 <th scope="col" ></th>
