--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -261,7 +261,8 @@
 <h6 style="text-align: center; color:#24a4cc; ">Ventas año anterior desde {{oBuscar.FechaDesdeAnterior}} hasta {{oBuscar.FechaHastaAnterior}}</h6>
   <table  class="table table-hover table-striped" id="firstTable"  datatable [dtOptions]="dtOptions[0]" [dtTrigger]="dtTrigger1" >
     <thead class="thead-p">
-      <tr class="EncTabla">            
+      <tr class="EncTabla">         
+
         <th style="background-color: #24a4cc; color: white;" scope="col">CATEG</th>
         <th style="background-color: #24a4cc; color: white;" scope="col">NOMBRE</th>
         <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">PIEZAS</th>
@@ -273,8 +274,9 @@
     <tbody>          
 
       <ng-container *ngFor="let datos of oAnioAnteriorRes index as i">
-        <tr>              
-          <th class="FilasFonelli">{{'CATEGORIA ' +datos.CategoriaCodigo + ' : ' + datos.CategoriaNombre }}</th>   
+        <tr>         
+          
+          <th class="FilasFonelli">{{'CATEGORIA ' +datos.CategoriaCodigo + ' : ' + datos.CategoriaNombre }}</th>
           <td></td>                
           <td></td>
           <td></td>
@@ -282,7 +284,8 @@
           <td></td>
         </tr>
 
-        <tr *ngFor="let subCat of datos.Subcategorias index as i">              
+        <tr *ngFor="let subCat of datos.Subcategorias index as i">            
+  
           <td class="FilasFonelli" style="text-align:left">{{subCat.SubcategoriaCodigo}}</td>
           <td class="FilasFonelli">{{subCat.SubcategoriaNombre}}</td>                
           <td class="FilasFonelli" style="text-align:right">{{ subCat.PiezasAnioAntAux}}</td>
@@ -291,8 +294,9 @@
           <td class="FilasFonelli" style="text-align:right">{{ subCat.ValorAgregadoAnioAntAux}}</td>
         </tr>
 
-        <tr>              
-          <td></td>
+        <tr>     
+          <th></th>            
+
           <td class="FilasFonelli"> Total Categoria</td>                
           <td class="FilasFonBold" style="text-align:right"> {{datos.TotalCatPiezasAnioAnt}}</td>
           <td class="FilasFonBold" style="text-align:right">{{ datos.TotalCatGramosAnioAnt}}</td>
@@ -301,7 +305,8 @@
         </tr> 
 
       </ng-container>   
-      <tr>              
+      <tr>      
+        
         <td></td>
         <td class="FilasFonBold" style="color:#183e6f;"> Total General</td>                
         <td class="FilasFonBold" style="color:#183e6f;text-align:right;"> {{oFichaTecnicaRes.Contenido.TotalGenAnioAntPiezas}}</td>
@@ -457,7 +462,7 @@
 
         <div class="col-12" >                     
           <table  class="table table-striped">
-            <thead>
+            <thead class="thead-p2">
             <tr class="EncTabla">
               <th>#</th>
               <th scope="col" ></th>
