--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -628,7 +628,7 @@
   
             <div class="col-12">                     
               <table *ngIf="bBanderaDet"  class="table table-striped">
-                <thead>
+                <thead class="thead-p2">
                 <tr class="EncTabla">
                   <th scope="col">#</th>
                   <th scope="col">LN</th>
@@ -784,7 +784,7 @@
   
       <div class="col-12" >                     
         <table  class="table table-striped">
-          <thead>
+          <thead class="thead-p2">
           <tr class="EncTabla">
             <th>#</th>
             <th scope="col" ></th>
