--- a/src/app/components/reporteventas/reporteventas.component.css
+++ b/src/app/components/reporteventas/reporteventas.component.css
@@ -11,3 +11,19 @@
         top: 300px;
         /* background: white; */
     } 
+
+
+    
+    .thead-p2 tr:first-child Th {
+        position: sticky;
+        z-index: 12;
+        top: 0;
+        background: #24a4cc; 
+        }
+        
+        .thead-p2 Th {
+            position: fixed;
+            z-index: 12;
+            top: 60px;
+            background: #24a4cc; 
+        }
