Agrego nuevamente clase para Boton Excel en datatables
Agrego nuevamente la clase button.btnExcel en templatemo-nomad-force.css para mostrar botón excel en datatables

--- a/src/assets/css/templatemo-nomad-force.css
+++ b/src/assets/css/templatemo-nomad-force.css
@@ -882,3 +882,12 @@ table_Fija {
 .table_Fija tbody tr:nth-child(2n) .sticky {
   background: #f2f2f2;
 }
+
+/* ----------------------------------------- */
+button.btnExcel {
+  background-color: #198754 !important;
+  font-family: QuickSand-SemiBold;
+  margin-bottom: 14px;
+  margin-left: 40px;
+}
+/* ----------------------------------------- */
