Reporte de Ventas - Total general ahora es datatable
Se configura el total general como datatable, para que se habilite la generación del archivo excel de esta tabla

--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -795,7 +795,7 @@
         <br>
 
           <h2 class="card-title">Total General</h2> 
-        <table class="table table-hover table-striped">
+        <table class="table table-hover table-striped" id="thirdTable" datatable [dtOptions]="dtOptions[2]" [dtTrigger]="dtTrigger3">
             <thead class="thead-p">
 
               <tr class="EncTabla">                 
