--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -176,8 +176,8 @@
 <div [hidden]="!bBandera"  class="container float-left">  
   <!-- <div class="container" >      -->
 
-    <h6 style="text-align: center; font-size:xx-large;">{{ obtenNombreCliente(oBuscar.Cliente) }}</h6>          
-    <h6 style="text-align: center; font-size:xx-large;">Desde filial {{oBuscar.FilialDesde}} hasta filial {{oBuscar.FilialHasta}} </h6>
+    <h6 style="text-align: center; font-size:xx-large;">{{ oFichaTecnicaRes.Contenido.ClienteNombre }}</h6>          
+    <h6 style="text-align: center; font-size:xx-large;">Desde filial {{oFichaTecnicaRes.Contenido.FilialInicial}} hasta filial {{oFichaTecnicaRes.Contenido.FilialFinal}} </h6>
 
     <div class="form-row">
       <div class="col-md-2">              
