Quité item de menu "Distribuidores" y comenté rutas para acceder a módulo de clientes
Lo mencionada es para bloquear el acceso indebido que algunos clientes están haciendo, pues la versión actual les permite editar el HTML, cambiar el código de cliente y ver información que no es la suya.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -51,10 +51,11 @@
                         
                     </li>
 
-                    <li class="nav-item">
-                        <!--<a class="nav-link" href="#portfolio">Portfolio</a>-->
+                    <!-- drendon 28/abr/2023 Voy a deshabilitar este item de menu hasta que se coriga el error
+                    <li class="nav-item">                        
                         <a class="nav-link"  href="javascript:void(0);"(click)="openDistribuidor(LoginDistribuidor)">Distribuidores</a>
                     </li>
+                    -->
 
                     <li class="nav-item">
                         <!--<a class="nav-link" href="#news">News & Events</a>-->
